--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -75,5 +75,8 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+            ACCESS_TOKEN: ${{ secrets.PAGES_TOKEN }}
+            BRANCH: gh-pages
+            FOLDER: notes/public
