--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -74,9 +74,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+       - name: Deploy to GitHub Pages
+         run: ls
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
             ACCESS_TOKEN: ${{ secrets.PAGES_TOKEN }}
             BRANCH: gh-pages
-            FOLDER: notes/public
+            FOLDER: ./public
