--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -79,4 +79,4 @@ jobs:
         with:
             ACCESS_TOKEN: ${{ secrets.PAGES_TOKEN }}
             BRANCH: gh-pages
-            FOLDER: ./public
+            FOLDER: ../public
