--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -70,4 +70,4 @@ jobs:
         with:
             ACCESS_TOKEN: ${{ secrets.PAGES_TOKEN }}
             BRANCH: gh-pages
-            FOLDER: ../public
+            FOLDER: notes/public
