--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -65,9 +65,13 @@ jobs:
       - name: ls
         run: |
           ls
+          cd ..
+          ls
+          cd notes
+          ls
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
             ACCESS_TOKEN: ${{ secrets.PAGES_TOKEN }}
             BRANCH: gh-pages
-            FOLDER: notes/public
+            FOLDER: ./public
