--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 baseURL: "https://tangxiaomi.top/notes/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
 title: Notes
-paginate: 3
+paginate: 5
 theme: PaperMod
-languageCode: "zh"
-defaultContentLanguage: "zh"
+languageCode: "cn"
+defaultContentLanguage: "cn"
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
@@ -19,30 +19,30 @@ minify:
     # minifyOutput: true
 
 languages:
-    zh:
+    cn:
         # languageName: "zh"
         # languagedirection: rtl
         # weight: 1
+        # title: '糖小米'
+        # imageUrl: "/notes/avatar.svg"
+        # imageTitle: '糖小米'
         taxonomies:
-          # category: categories
-          # tag: tags
+          category: categories
+          tag: tags
           series: series
         # menu:
         #     main:
-        #         - name: Archive
-        #           url: archives
-        #           weight: 5
-        #         - name: Tags
-        #           url: tags/
-        #           weight: 9
-        #         - name: Search
-        #           url: search/
-        #           weight: 10
+        #        - name: 归档
+        #          url: archives
+        #        - name: 标签
+        #          url: tags
+        #        - name: 搜索
+        #          url: search
 
 outputs:
     home:
         - HTML
-        - RSS
+        # - RSS
         - JSON
 
 params:
@@ -58,41 +58,43 @@ params:
     ShowShareButtons: false
     ShowReadingTime: true
     # disableSpecial1stPost: true
+    UseHugoToc: true
+    tocopen: true
     displayFullLangName: true
     ShowPostNavLinks: true
-    ShowBreadCrumbs: true
+    ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowRssButtonInSectionTermList: true
-    ShowToc: true
+    ShowToc: false
     # comments: false
-    images: ["papermod-cover.png"]
+    # images: ["papermod-cover.png"]
 
     profileMode:
         enabled: true
         title: '糖小米'
         imageUrl: "/notes/avatar.svg"
         imageTitle: '糖小米'
-        # imageWidth: 120
-        # imageHeight: 120
+        imageWidth: 200
+        imageHeight: 200
         buttons:
-            - name: 归档
+            - name: Archive
               url: archives
-            - name: 标签
+            - name: Tags
               url: tags
-            - name: 搜索
+            - name: Search
               url: search
 
     homeInfoParams:
-        Title: "PaperMod"
+        Title: "糖小米"
         languagedirection: rtl
-        Content: >
-            Welcome to demo of hugo's theme PaperMod.
+        # Content: >
+        #     Welcome to demo of hugo's theme PaperMod.
 
-            - **PaperMod** is a simple but fast and responsive theme with useful feature-set that enhances UX.
+        #     - **PaperMod** is a simple but fast and responsive theme with useful feature-set that enhances UX.
 
-            - Do give a 🌟 on Github !
+        #     - Do give a 🌟 on Github !
 
-            - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper).
+        #     - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper).
 
     socialIcons:
         - name: github
@@ -115,12 +117,12 @@ params:
     #         SiteVerificationTag: "XYZabc"
 
     assets:
-        disableHLJS: true
-    #     favicon: "<link / abs url>"
-    #     favicon16x16: "<link / abs url>"
-    #     favicon32x32: "<link / abs url>"
-    #     apple_touch_icon: "<link / abs url>"
-    #     safari_pinned_tab: "<link / abs url>"
+        disableHLJS: false
+        favicon: "/notes/avatar.svg"
+        favicon16x16: "/notes/avatar.svg"
+        favicon32x32: "/notes/avatar.svg"
+        # apple_touch_icon: "<link / abs url>"
+        # safari_pinned_tab: "<link / abs url>"
 
     # cover:
     #     hidden: true # hide everywhere but not in structured data
@@ -145,7 +147,7 @@ markup:
         # anchorLineNos: true
         # codeFences: true
         # guessSyntax: true
-        # lineNos: true
+        lineNos: true
         # style: monokai
 
 privacy:
