--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "https://tangxiaomi.top/notes/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-title: Notes
+title: Notes 📒
 paginate: 5
 theme: PaperMod
 languageCode: "cn"
@@ -71,17 +71,17 @@ params:
 
     profileMode:
         enabled: true
-        title: '糖小米'
+        title: '糖小米 🚀 '
         imageUrl: "/notes/avatar.svg"
         imageTitle: '糖小米'
         imageWidth: 200
         imageHeight: 200
         buttons:
-            - name: Archive
+            - name: Archive 📁
               url: archives
-            - name: Tags
-              url: tags
-            - name: Search
+            - name: Tags 🏷️
+              url: tags 
+            - name: Search 🔍
               url: search
 
     homeInfoParams:
